--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,58 @@
 <resources>
 
-    <style name="Widget.Theme.PhotoEditor.MyView" parent="">
-        <item name="android:background">@color/gray_400</item>
-        <item name="exampleColor">@color/light_blue_400</item>
+    <style name="Theme.PhotoEditor.WelcomeText">
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">@dimen/welcome_text_size</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Theme.PhotoEditor.Button" parent="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:minHeight">@dimen/min_button_height</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
+        <item name="strokeColor">@color/buttonStroke</item>
+        <item name="iconTint">@color/black</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
+        <item name="strokeWidth">@dimen/button_stroke_width</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="iconPadding">@dimen/half</item>
+        <item name="iconGravity">textStart</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
+    </style>
+
+    <style name="Theme.PhotoEditor.Button.Accent">
+        <item name="android:minHeight">@dimen/min_accent_button_height</item>
+        <item name="iconTint">@color/accent</item>
+        <item name="strokeColor">@color/accent</item>
+        <item name="android:textColor">@color/accent</item>
+    </style>
+
+    <style name="Theme.PhotoEditor.Header">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:minHeight">80dp</item>
+        <item name="android:background">@color/headerBackground</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="Theme.PhotoEditor.Header.Effect">
+        <item name="android:paddingStart">12dp</item>
+    </style>
+
+    <style name="imagePreviewOnEffect">
+        <item name="android:layout_height">520dp</item>
+    </style>
+
+    <style name="MySeekBar">
+        <item name="android:progressBackgroundTint">#27201F1F</item>
+        <item name="android:progressTint">#1C1C1C</item>
+        <item name="android:thumbTint">#151515</item>
     </style>
 </resources>
