--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,50 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.PhotoEditor.Button" parent="@style/Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:minHeight">48dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
-        <item name="strokeColor">@color/black</item>
-    </style>
-
-    <style name="Theme.PhotoEditor.Button.Accent">
-        <item name="android:textColor">@color/accent</item>
-        <item name="strokeColor">@color/accent</item>
-    </style>
-
-    <style name="Theme.PhotoEditor.Header">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">80dp</item>
-        <item name="android:minHeight">80dp</item>
-        <item name="android:background">@color/headerBackground</item>
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="Theme.PhotoEditor.Header.Effect">
-        <item name="android:paddingStart">12dp</item>
-    </style>
-
-    <style name="imagePreviewOnEffect">
-        <item name="android:layout_height">520dp</item>
-    </style>
-
     <style name="Theme.PhotoEditor.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.PhotoEditor.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.PhotoEditor.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-    
-    <style name="MySeekBar">
-        <item name="android:progressBackgroundTint">#27201F1F</item>
-        <item name="android:progressTint">#1C1C1C</item>
-        <item name="android:thumbTint">#151515</item>
-    </style>
+    <style name="Theme.PhotoEditor.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+    <style name="Theme.PhotoEditor.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
 </resources>
